force-app/main/default/objects/EmailDataPayload__e/EmailDataPayload__e.object-meta.xml
<CustomObject>
    <label>EmailDataPayload</label>
    <pluralLabel>EmailDataPayload</pluralLabel>
</CustomObject>