force-app/main/default/objects/EmailDataPayload__e/fields/BccAddress__c.field-meta.xml
<CustomField>
    <fullName>BccAddress__c</fullName>
    <label>BccAddress</label>
    <length>50</length>
    <type>Text</type>
</CustomField>