force-app/main/default/objects/EmailDataPayload__e/fields/CcAddress__c.field-meta.xml
<CustomField>
    <fullName>CcAddress__c</fullName>
    <label>CcAddress</label>
    <length>50</length>
    <type>Text</type>
</CustomField>