force-app/main/default/objects/EmailDataPayload__e/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label>CreatedDate</label>
    <type>DateTime</type>
</CustomField>