force-app/main/default/objects/EmailDataPayload__e/fields/IdOfCsv__c.field-meta.xml
<CustomField>
    <fullName>IdOfCsv__c</fullName>
    <label>IdOfCsv</label>
    <length>50</length>
    <type>Text</type>
</CustomField>