force-app/main/default/objects/EmailDataPayload__e/fields/MessageDate__c.field-meta.xml
<CustomField>
    <fullName>MessageDate__c</fullName>
    <label>MessageDate</label>
    <type>DateTime</type>
</CustomField>