force-app/main/default/objects/EmailDataPayload__e/fields/TextBody__c.field-meta.xml
<CustomField>
    <fullName>TextBody__c</fullName>
    <label>TextBody</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>