force-app/main/default/objects/EmailDataPayload__e/fields/ToAddress__c.field-meta.xml
<CustomField>
    <fullName>ToAddress__c</fullName>
    <label>ToAddress</label>
    <length>50</length>
    <type>Text</type>
</CustomField>